# Data_mining_course_AGH

./: .gitignore  README.md  pyproject.toml
src/data_mining/Lab_1/: lab1.ipynb
src/data_mining/Lab_2/: lab2.ipynb
src/data_mining/Lab_3/1_Standard_reports/: Standard_reports.sdm
src/data_mining/Lab_3/2_Credit_risk_analysis/: Credit_risk_analysis.md  Credit_risk_analysis.sdm
src/data_mining/Lab_3/3_Cluster_analysis/: Auta_all.sdm  Cars.sdm  Cluster_analysis.md
src/data_mining/Lab_3/4_Predicting_energy_demand/: Energy_demand_prediction.md
src/data_mining/Lab_3/5_Examination_of_predictors/: Examination_of_predictors.md
src/data_mining/Lab_3/Predicting_energy_demand/: Energy_demand_prediction.sdm
src/data_mining/Lab_4/: lab4.m  lab4_extra.m
